2012-05-28 Roman
- !:FIX:Archives, UI.Vision, UI.WebVision: Hang at trend build for constant big value like 1e-37 is fixed.


2012-05-27 Roman
- FIX:DB: Boiler DB is fixed for set correct Kotel controllers' schedule to 5ms and 1s.
- Archives: Service request <set path="/serv/mess"/> is added.


2012-05-23 Roman
- DB: Main libraries and model AGLKS is updated for QuickStart expanding.
- DAQ.BlockCalc, DAQ.DAQGate, DAQ.DCON, DAQ.LogicLev, DAQ.Siemens, DAQ.System:
    Set default scheduling to "1" second at new controller object creation is fixed.
- UI.QTCfg: "Target" combobox field is disabled for one item to select.


2012-05-22 Roman
- SYS.XMLNode: Tree clean from comments and procedure insertions at save is added by option XMLNode::Clean.
- UI.VCAEngine: GeomZ attribute for new created include widgets set to full include widgets number, for place it to upward.
- FIX:UI.Vision: Bad processing for procedure's insertions into QT4 document view HTML parser fix by clean primitive
    "Document" XHTML code from comments and procedure insertions at place for view.
- FIX:DAQ.ModBus: "EVAL" blink on logical attribute set is fixed.


2012-05-18 Roman
- FIX:SYS.TConfig: Function TCfg&TCfg::operator=( const char *vl ) is added for correct assign string constants.
- FIX:UI.VCAEngine: Recursive pages copy is prevented on copy upward branch to internal.
    Widget container copy as link to self is prevented, at enabling.
- UI.VCAEngine: Translation is some updated.


2012-05-15 Roman
- FIX:UI.VCAEngine: Name changing for no user attributes is fixed.


2012-05-13 Roman
- DB.Boiler: Some translation to English and Ukrainian is updated.
- FIX:UI.Vision: Export primitive "Diagram" to CVS is limited to real trend borders.
    Limit for variable "valsForPix" of primitive "Diagram" is expanded from 3 bit (<8) to 4 bit (<16).


2012-05-07 Roman
- UI.Vision: QFileDialog option QFileDialog::ReadOnly is set conditional to QT4 version >= 4.5.