@@ -888,9 +888,11 @@ void MTable::setVal( TCfg &cfg, const string &val )
 
 string MTable::UTCtoSQL( time_t val )
 {
-    struct tm tm_tm;
-    localtime_r(&val,&tm_tm);
     char buf[255];
+    struct tm tm_tm;
+
+    //localtime_r(&val,&tm_tm);
+    gmtime_r(&val,&tm_tm);
     int rez = strftime( buf, sizeof(buf), "%Y-%m-%d %H:%M:%S", &tm_tm );
 
     return (rez>0) ? string(buf,rez) : "";
@@ -901,5 +903,6 @@ time_t MTable::SQLtoUTC( const string &val )
     struct tm stm;
     strptime(val.c_str(),"%Y-%m-%d %H:%M:%S",&stm);
 
-    return mktime(&stm);
+    //return mktime(&stm);
+    return timegm(&stm);
 }
